--- a/views/todos/index.hbs
+++ b/views/todos/index.hbs
@@ -7,7 +7,7 @@
   <link href="output_main.css" rel="stylesheet">
   </link>
   <script src="htmx.min.js"></script>
-  <script src="todos_page.js" defer></script>
+  <script src="todos_page/index.js" defer></script>
 </head>
 
 <body>
@@ -48,21 +48,7 @@
         </td>
       </tr>
       {{!-- delete todo item modal --}}
-      <dialog id="delete_todo_{{this.id}}_modal" class="modal">
-        <div class="modal-box">
-          <h3 class="text-lg font-bold">Delete todo number {{this.id}}</h3>
-          <div class="modal-action">
-            <form method="dialog">
-              <button class="btn">Cancel</button>
-              <button class="btn btn-primary" hx-delete="/todos-page/{{this.id}}" hx-swap="delete"
-                hx-target="#todo_item_{{this.id}}" htmx-on="htmx:afterRequest"
-                hx-vals='{"requestType": "DELETE_TODO", "deleteId": "delete_todo_{{this.id}}_modal"}'>
-                Confirm
-              </button>
-            </form>
-          </div>
-        </div>
-      </dialog>
+      {{> deleteTodoModal }}
       {{!-- delete todo item modal --}}
       {{/each}}
     </table>
