--- a/views/todos/index.hbs
+++ b/views/todos/index.hbs
@@ -2,12 +2,7 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Todos</title>
-  <link href="output_main.css" rel="stylesheet">
-  </link>
-  <script src="htmx.min.js"></script>
+  {{> commonHeader }}
   <script src="todos_page/index.js" defer></script>
 </head>
 
