--- a/views/todos/index.hbs
+++ b/views/todos/index.hbs
@@ -21,6 +21,9 @@
           ID
         </th>
         <th>
+          Email
+        </th>
+        <th>
           Name
         </th>
         <th>
