--- a/views/todos/delete_todo_modal.hbs
+++ b/views/todos/delete_todo_modal.hbs
@@ -4,14 +4,7 @@
     <div class='modal-action'>
       <form method='dialog'>
         <button class='btn'>Cancel</button>
-        <button
-          class='btn btn-primary'
-          hx-delete='/todos-page/{{id}}'
-          hx-swap='delete'
-          hx-target='#todo_item_{{id}}'
-          htmx-on='htmx:afterRequest'
-          hx-vals='{"requestType": "DELETE_TODO", "deleteId": "delete_todo_{{id}}_modal"}'
-        >
+        <button class='btn btn-primary' hx-delete='/todos-page/{{id}}'>
           Confirm
         </button>
       </form>
