--- a/views/todos/todo_item_row.hbs
+++ b/views/todos/todo_item_row.hbs
@@ -3,10 +3,13 @@
     {{id}}
   </td>
   <td>
+    {{email}}
+  </td>
+  <td>
     {{name}}
   </td>
   <td class='w-52'>
-    <button class='btn btn-primary'>
+    <button class='btn btn-primary' hx-get='/todos-page/todo-inputs/{{id}}' hx-target='#todo_modal_form_inputs'>
       Edit
     </button>
     <button class='btn btn-error' onclick='delete_todo_{{id}}_modal.showModal()'>
