--- a/views/todos/todo_form_data_inputs.hbs
+++ b/views/todos/todo_form_data_inputs.hbs
@@ -1,30 +1,24 @@
 {{#if id}}
-<div class='mt-4'>
-  <div class='label'>
-    <span class='label-text'>ID:</span>
-  </div>
-  <input class='input input-sm' name='id' value='{{id}}' disabled />
+<div class='label'>
+  <span class='label-text'>ID:</span>
+</div>
+<input class='input input-bordered input-sm' name='id' value='{{id}}' disabled />
+{{/if}}
+<div class='label'>
+  <span class='label-text'>Email:</span>
+</div>
+<input class='input input-bordered input-sm {{#if error.email}}input-error{{/if}}' name='email' value='{{email}}' />
+{{#if error.email}}
+<div class='label'>
+  <span class='label-text-alt text-red-400'>{{error.email}}</span>
 </div>
 {{/if}}
-<div class='mt-4'>
-  <div class='label'>
-    <span class='label-text'>Email:</span>
-  </div>
-  <input class='input input-sm {{#if error.email}}input-error{{/if}}' name='email' value='{{email}}' />
-  {{#if error.email}}
-  <div class='label'>
-    <span class='label-text-alt text-red-400'>{{error.email}}</span>
-  </div>
-  {{/if}}
+<div class='label'>
+  <span class='label-text'>Name:</span>
 </div>
-<div class='mt-4'>
-  <div class='label'>
-    <span class='label-text'>Name:</span>
-  </div>
-  <input class='input input-sm {{#if error.name}}input-error{{/if}}' name='name' value='{{name}}' />
-  {{#if error.name}}
-  <div class='label'>
-    <span class='label-text-alt text-red-400'>{{error.name}}</span>
-  </div>
-  {{/if}}
+<input class='input input-bordered input-sm {{#if error.name}}input-error{{/if}}' name='name' value='{{name}}' />
+{{#if error.name}}
+<div class='label'>
+  <span class='label-text-alt text-red-400'>{{error.name}}</span>
 </div>
+{{/if}}
