Todo filter form

--- a/views/todos/index.hbs
+++ b/views/todos/index.hbs
@@ -16,9 +16,26 @@
         Create
       </button>
     </div>
+    <form id='todo_filter_form' class='m-0 flex gap-2 items-center justify-center' hx-get='/todos-page/todo-items'
+      hx-target='#todo_table_body' hx-trigger='getTodoItemsEvent from:body, load' hx-swap='innerHTML'>
+      <label class="input input-bordered input-sm flex items-center gap-2">
+        ID
+        <input name='id' type="text" class="grow" value='{{idParam}}' />
+      </label>
+      <label class="input input-bordered input-sm flex items-center gap-2">
+        Email
+        <input name='email' type="text" class="grow" value='{{emailParam}}' />
+      </label>
+      <label class="input input-bordered input-sm flex items-center gap-2">
+        Name
+        <input name='name' type="text" class="grow" value='{{nameParam}}' />
+      </label>
+      <button type='submit' class='btn btn-active'>
+        Search
+      </button>
+    </form>
     {{> createOrEdittodoModal }}
-    <table class='table table-zebra' hx-get='/todos-page/todo-items' hx-target='#todo_table_body'
-      hx-trigger='getTodoItemsEvent from:body, load' hx-swap='innerHTML'>
+    <table class='table table-zebra'>
       <thead>
         <th>
           ID
