Refactors file names

--- a/views/pages/todos/todo-item-row.hbs
+++ b/views/pages/todos/todo-item-row.hbs
@@ -11,7 +11,7 @@
   <td>
     <div class='flex items-center gap-2'>
       <button class='btn btn-primary loading-btn' hx-get='/todos-page/todo-inputs/{{id}}'
-        hx-target='#todo_modal_form_inputs'>
+        hx-target='#todo-modal-form-inputs'>
         <span class='loading loading-spinner'>
         </span>
         Edit
