--- a/views/pages/todos/create-or-edit-todo-modal.hbs
+++ b/views/pages/todos/create-or-edit-todo-modal.hbs
@@ -7,7 +7,7 @@
       hx-swap='none'
       hx-indicator='#create_or_edit_todo_modal_confirm_button'
     >
-      <div id='todo_modal_form_inputs'>
+      <div id='todo-modal-form-inputs'>
       </div>
       <div class='modal-action'>
         <button
