--- a/views/pages/todos/index.hbs
+++ b/views/pages/todos/index.hbs
@@ -12,7 +12,7 @@
       Todo list
     </h1>
     <div class='flex justify-end'>
-      <button class='btn btn-success loading-btn' hx-get='/todos-page/todo-inputs' hx-target='#todo_modal_form_inputs'>
+      <button class='btn btn-success loading-btn' hx-get='/todos-page/todo-inputs' hx-target='#todo-modal-form-inputs'>
         <span class='loading loading-spinner'></span>
         Create
       </button>
